# cdpy

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
cdpy/: __init__.py  _cdpy.py  accessibility.py  animation.py  application_cache.py  audits.py  background_service.py  browser.py  cache_storage.py  cast.py  cdpy.py  common.py  console.py  css.py  database.py  debugger.py  device_orientation.py  dom.py  dom_debugger.py  dom_snapshot.py  dom_storage.py  domain.py  emulation.py  fetch.py  headless_experimental.py  heap_profiler.py  http_endpoints.py  indexed_db.py  input.py  inspector.py  io.py  layer_tree.py  log.py  media.py  memory.py  network.py  overlay.py  page.py  performance.py  performance_timeline.py  (+13 more)
cdpy/cdp/: _utils.py  accessibility.py  animation.py  application_cache.py  audits.py  background_service.py  browser.py  cache_storage.py  cast.py  console.py  css.py  database.py  debugger.py  device_orientation.py  dom.py  dom_debugger.py  dom_snapshot.py  dom_storage.py  emulation.py  fetch.py  headless_experimental.py  heap_profiler.py  indexed_db.py  input.py  io.py  layer_tree.py  log.py  media.py  memory.py  network.py  overlay.py  page.py  performance.py  performance_timeline.py  profiler.py  runtime.py  schema.py  security.py  (+7 more)
generator/: ast_utils.py  browser_protocol-v1.3.json  gen.py  js_protocol_v1.3.json
tests/: test_cdpy.py  test_commands.py  test_complex_types.py  test_events.py  test_http_endpoints.py  test_methods.py  test_simple_types.py  test_type_builtin_and_enum.py  test_type_object.py  test_types.py
(+23 files in other folders)
