[tool.poetry]
name = "cdpy"
version = "0.1.0"
description = ""
authors = ["Michael Brunner <MichaelBrunn3r@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.7.0"
pre-commit = "^2.10.0"
mypy = "^0.800"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
