[tool.poetry]
name = "cdpy"
version = "0.1.0"
description = ""
authors = ["Michael Brunner <MichaelBrunn3r@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
isort = "^5.7.0"
pre-commit = "^2.10.0"
mypy = "^0.800"
typer = "^0.3.2"
inflection = "^0.5.1"
requests = "^2.25.1"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
